<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_general">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tabWrapper"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:background="@color/night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="0dp"
        app:elevation="0dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:contentDescription="Tabs"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@drawable/tab_states"
            app:tabPaddingStart="20dp"
            app:tabPaddingEnd="20dp"
            app:tabIndicator="@null"
            app:tabTextColor="@color/ice"
            app:tabTextAppearance="@style/TabText">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/matchSetupTab"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/Setup" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/autonTab"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/Auton" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/teleopTab"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/Teleop" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/endGameTab"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/EndGame" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabWrapper" />
</androidx.constraintlayout.widget.ConstraintLayout>