<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/QRCodeConfirm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg_general"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/IDSetupNextMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:gravity="center_horizontal"
        android:text="@string/SetupNextMatchID"
        android:textColor="@drawable/text_subead_states"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IDSetupNextMatchDirections"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/SetupNextMatchDirections"
        android:textColor="@color/cloud"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDSetupNextMatch" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginVertical="20dp"
        android:background="@color/ocean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDSetupNextMatchDirections" />

    <Button
        android:id="@+id/SetupNextMatchButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_large_active"
        app:icon="@drawable/right"
        app:iconGravity="textEnd"
        app:iconTint="@null"
        android:text="@string/SetupNextMatch"
        android:textColor="@color/ice"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <Button
        android:id="@+id/CancelConfirm"
        android:layout_width="470dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans"
        android:text="@string/Cancel"
        android:textColor="@color/cloud"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetupNextMatchButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
<!-- hi srikar -->