<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_general">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginVertical="10dp"
        android:background="@color/bg_general"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@drawable/button_states"
        app:tabTextColor="@color/ice">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/matchSetupTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_left_states"
            android:text="@string/Setup"
            app:tabBackground="@drawable/toggle_left_states" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/autonTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_left_states"
            android:text="@string/Auton"
            app:tabBackground="@drawable/toggle_left_states" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/teleopTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Teleop" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/endgametab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toggle_right_states"
            android:text="@string/EndGame"
            app:tabBackground="@drawable/toggle_right_states" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />


    <!--
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/TitleBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#1D664B"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        -->

</androidx.constraintlayout.widget.ConstraintLayout>