<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg_general"
    android:maxHeight="500dp"
    android:padding="@dimen/padding">

    <View
        android:id="@+id/view2"
        android:layout_width="440dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/ocean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsPasswordSwitch" />

    <TextView
        android:id="@+id/IDPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium_condensed_bt"
        android:text="SET PASSWORD"
        android:textColor="@color/sky"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/edittext_rounded_corners"
        android:fontFamily="@font/open_sans"
        android:inputType="textVisiblePassword"
        android:textColor="@color/charcoal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDPassword" />

    <Button
        android:id="@+id/DoneButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_large_active"
        android:fontFamily="@font/open_sans"
        android:text="@string/Done"
        android:textColor="@color/ice"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans"
        android:text="@string/Cancel"
        android:textColor="@color/cloud"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoneButton" />


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/SettingsPasswordSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:text="@string/IDPasswordRequiredConfirm"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/cloud"
            app:layout_constraintStart_toStartOf="@+id/PasswordField"
            app:layout_constraintTop_toBottomOf="@+id/PasswordField"
            app:thumbTint="@color/thumb_states"
            app:trackDecoration="@null"
            app:trackTint="@color/track_states" />

</androidx.constraintlayout.widget.ConstraintLayout>